@@ -5,6 +5,8 @@ import com.pluralsight.toppings.Meat;
 import com.pluralsight.toppings.RegularTopping;
 import com.pluralsight.toppings.Sauce;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class BLT extends Sandwich{
@@ -15,8 +17,8 @@ public class BLT extends Sandwich{
                 true,
                 new Meat("Bacon",false,8),
                 new Cheese("Cheddar",false,8),
-                List.of(new RegularTopping("Lettuce",false),
-                        new RegularTopping("Tomatoes",false)),
-                List.of(new Sauce("Ranch",false)));
+                new ArrayList<>(Arrays.asList(new RegularTopping("Lettuce",false),
+                        new RegularTopping("Tomatoes",false))),
+                new ArrayList<>(Arrays.asList(new Sauce("Ranch",false))));
     }
 }
