@@ -5,6 +5,8 @@ import com.pluralsight.toppings.Meat;
 import com.pluralsight.toppings.RegularTopping;
 import com.pluralsight.toppings.Sauce;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class ChoppedCheese extends Sandwich{
@@ -15,11 +17,11 @@ public class ChoppedCheese extends Sandwich{
                 false,
                 new Meat("Ground Beef",false,12),
                 new Cheese("American",false,12),
-                List.of(new RegularTopping("Lettuce",false),
+                new ArrayList<>(Arrays.asList(new RegularTopping("Lettuce",false),
                         new RegularTopping("Peppers",false),
                         new RegularTopping("Onions",false),
-                        new RegularTopping("Tomatoes",false)),
-                List.of(new Sauce("Mayo",false),
-                        new Sauce("Ketchup",false)));
+                        new RegularTopping("Tomatoes",false))),
+                new ArrayList<>(Arrays.asList(new Sauce("Mayo",false),
+                        new Sauce("Ketchup",false))));
     }
 }
